# AceTaskAgent

./: .env  .env.example  .gitignore  ARCHITECTURE_OVERVIEW.md  IMPLEMENTATION_GUIDE.md  OPTIMIZATION_PLAN.md  README.md  pyproject.toml  run_demo.py  setup.py  start_agent.py  start_ui.py
examples/: combined_document_mermaid_example.py  paginated_search_examples.py  stateinfo_data_collection.py  test_stateinfo_deep_search.py
output_folder/: excel_output_1_3_20260126_162340.xlsx  excel_output_1_5_20260126_153739.xlsx  research_results_20260126_223834.md  research_results_20260127_224033.md  research_results_20260127_233220.md
task_manager/: __init__.py
temp_folder/: supply_chain_trends_analysis.xlsx
tests/: check_available_engines.py  check_ddgs_backends.py  quick_start_logging.py  setup_logging.py  test_agent_automated.py  test_breakdown_iteration.py  test_code_interpreter_agent_dual_support.py  test_data_extraction_agent_dual_support.py  test_ddgs_diagnostics.py  test_deepseek_integration.py  test_deepseek_simple.py  test_document_agent.py  test_document_routing_fix.py  test_document_task_analysis.py  test_excel_agent_dual_support.py  test_execution_tracer.py  test_file_operations.py  test_graph_of_thought.py  test_integration_task_relay.py  test_logging_fix.py  test_mermaid_agent.py  test_ocr_agent.py  test_ocr_agent_dual_support.py  test_operation_aliases.py  test_output_path_logic.py  test_paginated_search.py  test_pdf_agent_dual_support.py  test_problem_solver_agent_dual_support.py  test_quick.py  test_quick_agents_check.py  test_task_manager.py  (+14 more)
(+55 files in other folders)
