"""
Configuration file for project
"""

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "task-manager-agent"
version = "1.0.0"
description = "A LangGraph-based recursive task orchestration system"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["task-management", "agent", "langgraph", "ai", "orchestration"]

dependencies = [
    "langgraph>=0.0.1",
    "langchain-anthropic>=0.1.0",
    "langchain-core>=0.1.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
langfuse = [
    "langfuse>=2.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
observability = [
    "langfuse>=2.0.0",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
